# typhon

./: .editorconfig  .gitignore  .markdownlint.yml  .taplo.toml  .yamllint  AGENTS.md  CODEMAP.md  CONTRIBUTING.md  CONVENTIONS.md  Cargo.toml  README.md  ROADMAP.md  clippy.toml  rustfmt.toml
.memory-bank/: active-context.md  decision-log.md  journal.md  product-context.md  progress.md  system-patterns.md
.roo/: mcp.json
.roo/commands/: code-review.md  resolve-conflicts.md
.roo/memory-bank/: active-context.md  decision-log.md  product-context.md  progress.md  system-patterns.md
crates/typhon-analyzer/: Cargo.toml  README.md
crates/typhon-analyzer/src/: context.rs  error.rs  lib.rs
crates/typhon-analyzer/src/analysis/: control_flow.rs  dead_code.rs  definite_assignment.rs  mod.rs
crates/typhon-analyzer/src/symbol/: mod.rs  scope.rs  table.rs  types.rs
crates/typhon-analyzer/src/types/: constraints.rs  environment.rs  mod.rs  ty.rs
crates/typhon-analyzer/src/visitors/: mod.rs  name_resolver.rs  semantic_validator.rs  symbol_collector.rs  type_checker.rs
crates/typhon-analyzer/tests/: name_resolution.rs  semantic_validation.rs  symbol_collection.rs  symbol_table.rs  type_checking.rs  type_system.rs
crates/typhon-ast/: Cargo.toml  README.md
crates/typhon-ast/src/: ast.rs  lib.rs  macros.rs  visitor.rs
crates/typhon-ast/src/nodes/: collections.rs  declarations.rs  expressions.rs  identifiers.rs  mod.rs  modules.rs  patterns.rs  statements_control.rs  statements_core.rs  statements_error.rs  types.rs
crates/typhon-ast/tests/: visitable.rs
crates/typhon-cli/: Cargo.toml  README.md
crates/typhon-cli/src/: main.rs
crates/typhon-cli/src/commands/: build.rs  check.rs  doc.rs  fmt.rs  init.rs  lint.rs  mod.rs  new.rs  repl.rs  run.rs  test.rs  version.rs  watch.rs
crates/typhon-compiler/: Cargo.toml  README.md  build.rs
crates/typhon-compiler/src/: common.rs  driver.rs  lib.rs  mod.rs
crates/typhon-compiler/src/backend/: codegen.rs  error.rs  llvm.rs  mod.rs  tests.rs
crates/typhon-compiler/src/backend/codegen/: context.rs  expressions.rs  functions.rs  generator.rs  mod.rs  operations.rs  statements.rs  symbol_table.rs  types.rs  visitor.rs
crates/typhon-compiler/src/driver/: mod.rs
crates/typhon-compiler/src/frontend/: mod.rs
crates/typhon-compiler/src/frontend/ast/: mod.rs  visitor.rs
crates/typhon-compiler/src/frontend/lexer/: lexer.rs  mod.rs  tests.rs  token.rs
crates/typhon-compiler/src/frontend/parser/: error.rs  mod.rs  parser.rs  tests.rs
crates/typhon-compiler/src/typesystem/: checker.rs  error.rs  mod.rs  tests.rs  types.rs
crates/typhon-lsp/: Cargo.toml  README.md
crates/typhon-lsp/src/: capabilities.rs  document.rs  handlers.rs  lib.rs  main.rs  server.rs  tests.rs  utils.rs
crates/typhon-parser/: Cargo.toml  README.md
crates/typhon-parser/benches/: parser.rs
crates/typhon-parser/src/: lib.rs
crates/typhon-parser/src/diagnostics/: error.rs  mod.rs  reporter.rs
crates/typhon-parser/src/lexer/: mod.rs  rules.rs  token.rs
crates/typhon-parser/src/parser/: context.rs  declaration.rs  identifier.rs  mod.rs  module.rs  pattern.rs  statement.rs  types.rs
crates/typhon-parser/src/parser/expressions/: comprehensions.rs  containers.rs  core.rs  helpers.rs  literals.rs  mod.rs  operators.rs  special.rs
crates/typhon-parser/src/parser/statements/: assignments.rs  context_managers.rs  control_flow.rs  core.rs  error_handling.rs  helpers.rs  keywords.rs  mod.rs
crates/typhon-parser/src/utils/: mod.rs
crates/typhon-parser/tests/: declaration.rs  expression.rs  identifier.rs  lexer.rs  module.rs  parser.rs  pattern.rs  statement.rs  types.rs
crates/typhon-repl/: Cargo.toml  README.md
crates/typhon-repl/src/: lib.rs  main.rs
crates/typhon-runtime/: Cargo.toml  README.md
crates/typhon-runtime/src/: builtins.rs  errors.rs  lib.rs  memory.rs  object.rs  vm.rs
crates/typhon-source/: Cargo.toml  README.md
crates/typhon-source/src/: lib.rs  types.rs
crates/typhon-stdlib/: Cargo.toml  README.md
crates/typhon-stdlib/src/: builtins.rs  collections.rs  errors.rs  io.rs  lib.rs  utils.rs
docs/: README.md
docs/compiler/frontend/: parser.md
docs/contributing/: memory-bank.md  style-guide.md
docs/language/: GRAMMAR.md  SPECIFICATION.md  specification.md
docs/lsp/: implementation-plan.md
docs/tldr/: 0000-tldr-template.md  0001-typhon-programming-language.md  0002-unified-cli-toolchain.md  README.md
examples/: demo.ty  hello.ty
