[profile.dev]
  debug     = true # Full debug info
  opt-level = 0    # No optimizations for development

[profile.release]
  codegen-units = 1       # Optimize for better runtime performance
  debug         = false   # No debug info in release
  lto           = true    # Link-time optimization
  opt-level     = 3       # Maximum optimizations
  panic         = "abort" # Abort on panic (smaller binary)

[workspace]
  members = ["crates/*"]
  resolver = "3"

  [workspace.dependencies]
    # Internal crates
    typhon-cli.path      = "crates/typhon-cli"
    typhon-compiler.path = "crates/typhon-compiler"
    typhon-lsp.path      = "crates/typhon-lsp"
    typhon-repl.path     = "crates/typhon-repl"
    typhon-runtime.path  = "crates/typhon-runtime"
    typhon-stdlib.path   = "crates/typhon-stdlib"

    # External dependencies
    anyhow = "1.0"
    bitflags = "2.4.1"
    chumsky = "0.9.3"
    crossbeam = "0.8"
    env_logger = "0.10"
    fxhash = "0.2"
    indenter = "0.3.3"
    insta = "1.34"
    log = "0.4"
    logos = "0.14.0"
    llvm-sys = "181.2.0"
    parking_lot = "0.12"
    paste = "1.0.14"
    proptest = "1.3"
    ropey = "1.6"
    rustyline = "12.0"
    rustc-hash = "1.1.0"
    serde_json = "1.0"
    strum_macros = "0.26.1"
    tempfile = "3.8"
    thiserror = "1.0.56"
    tower-lsp = "0.20"
    unicode-xid = "0.2.4"
    unic-ucd-category = "0.9.0"
    url = "2.4"

    [workspace.dependencies.clap]
      features = ["derive"]
      version = "4.4"

    [workspace.dependencies.inkwell]
      features = ["llvm18-1"]
      version = "0.6.0"

    [workspace.dependencies.miette]
      version = "7.0.0"
      features = ["fancy"]

    [workspace.dependencies.serde]
      features = ["derive"]
      version = "1.0"

    [workspace.dependencies.strum]
      features = ["derive"]
      version = "0.26.1"

    [workspace.dependencies.tokio]
      features = ["full"]
      version = "1.28"

  [workspace.package]
    authors     = ["Jonathan Howard <howard.jonathan.21@gmail.com>"]
    categories  = ["compilers", "development-tools", "programming-languages"]
    description = "A statically and strongly typed programming language based on Python 3"
    edition     = "2024"
    keywords    = ["compiler", "language", "llvm", "python", "static-typing"]
    license     = "Apache-2.0"
    readme      = "README.md"
    repository  = "https://github.com/typhon-dev/typhon"
    version     = "0.1.0"

  [workspace.lints.rust]
    unreachable_pub = "warn"
    unsafe_code     = "warn"

    [workspace.lints.rust.unexpected_cfgs]
      check-cfg = ["cfg(codspeed)", "cfg(fuzzing)"]
      level     = "warn"

  [workspace.lints.clippy]
    # Allowed pedantic lints
    char_lit_as_u8               = "allow"
    collapsible_else_if          = "allow"
    collapsible_if               = "allow"
    implicit_hasher              = "allow"
    map_unwrap_or                = "allow"
    match_same_arms              = "allow"
    missing_errors_doc           = "allow"
    missing_panics_doc           = "allow"
    module_name_repetitions      = "allow"
    must_use_candidate           = "allow"
    needless_continue            = "allow" # An explicit continue can be more readable, especially if the alternative is an empty block.
    similar_names                = "allow"
    single_match_else            = "allow"
    too_many_lines               = "allow"
    unnecessary_debug_formatting = "allow" # too many instances, the display also doesn't quote the path which is often desired in logs where we use them the most often.
    # Without the hashes we run into a `rustfmt` bug in some snapshot tests, see #13250
    needless_raw_string_hashes = "allow"
    # Disallowed restriction lints
    dbg_macro                       = "warn"
    empty_drop                      = "warn"
    empty_structs_with_brackets     = "warn"
    exit                            = "warn"
    get_unwrap                      = "warn"
    ignore_without_reason           = "allow" # Too many exsisting instances, and there's no auto fix.
    print_stderr                    = "warn"
    print_stdout                    = "warn"
    rc_buffer                       = "warn"
    rc_mutex                        = "warn"
    rest_pat_in_fully_bound_structs = "warn"
    # nursery rules
    debug_assert_with_mut_call = "warn"
    redundant_clone            = "warn"
    unused_peekable            = "warn"

    [workspace.lints.clippy.pedantic]
      level    = "warn"
      priority = -2

      # Diagnostics are not actionable: Enable once https://github.com/rust-lang/rust-clippy/issues/13774 is resolved.
      large_stack_arrays = "allow"

  [workspace.metadata.cargo-machete]
    check_internal_dependencies = false
