[profile.dev]
  debug     = true # Full debug info
  opt-level = 0    # No optimizations for development

[profile.release]
  codegen-units = 1       # Optimize for better runtime performance
  debug         = false   # No debug info in release
  lto           = true    # Link-time optimization
  opt-level     = 3       # Maximum optimizations
  panic         = "abort" # Abort on panic (smaller binary)

[workspace]
  members  = ["crates/*"]
  resolver = "3"

  [workspace.dependencies]
    # Internal crates
    typhon-ast.path      = "crates/typhon-ast"
    typhon-cli.path      = "crates/typhon-cli"
    typhon-compiler.path = "crates/typhon-compiler"
    typhon-lsp.path      = "crates/typhon-lsp"
    typhon-parser.path   = "crates/typhon-parser"
    typhon-repl.path     = "crates/typhon-repl"
    typhon-runtime.path  = "crates/typhon-runtime"
    typhon-source.path   = "crates/typhon-source"
    typhon-stdlib.path   = "crates/typhon-stdlib"

    # External dependencies
    anyhow            = "1.0"
    bitflags          = "2.4.1"
    bumpalo           = "3.19.0"
    chumsky           = "0.9.3"
    criterion         = "0.4"
    crossbeam         = "0.8"
    cute              = "0.3.0"
    env_logger        = "0.10"
    fxhash            = "0.2"
    indenter          = "0.3.3"
    insta             = "1.34"
    llvm-sys          = "181.2.0"
    log               = "0.4"
    logos             = "0.14.0"
    parking_lot       = "0.12"
    paste             = "1.0.14"
    proptest          = "1.3"
    ropey             = "1.6"
    rustc-hash        = "1.1.0"
    rustyline         = "12.0"
    serde_json        = "1.0"
    strum_macros      = "0.26.1"
    tempfile          = "3.8"
    thiserror         = "1.0.56"
    tower-lsp         = "0.20"
    unic-ucd-category = "0.9.0"
    unicode-xid       = "0.2.4"
    url               = "2.4"

    [workspace.dependencies.clap]
      features = ["derive"]
      version  = "4.4"

    [workspace.dependencies.inkwell]
      features = ["llvm18-1"]
      version  = "0.6.0"

    [workspace.dependencies.miette]
      features = ["fancy"]
      version  = "7.0.0"

    [workspace.dependencies.serde]
      features = ["derive"]
      version  = "1.0"

    [workspace.dependencies.strum]
      features = ["derive"]
      version  = "0.26.1"

    [workspace.dependencies.tokio]
      features = ["full"]
      version  = "1.28"

  [workspace.package]
    authors     = ["Jonathan Howard <howard.jonathan.21@gmail.com>"]
    categories  = ["compilers", "development-tools", "programming-languages"]
    description = "A statically and strongly typed programming language based on Python 3"
    edition     = "2024"
    keywords    = ["compiler", "language", "llvm", "python", "static-typing"]
    license     = "Apache-2.0"
    readme      = "README.md"
    repository  = "https://github.com/typhon-dev/typhon"
    version     = "0.1.0"

  [workspace.lints.rust]
    # Correctness and safety-related lints
    absolute_paths_not_starting_with_crate  = "deny"
    dead_code                               = "warn"
    deprecated_in_future                    = "warn"
    elided_lifetimes_in_paths               = "warn"
    explicit_outlives_requirements          = "warn"
    invalid_doc_attributes                  = "deny"
    let_underscore_drop                     = "warn"
    macro_use_extern_crate                  = "warn"
    meta_variable_misuse                    = "warn"
    missing_abi                             = "warn"
    missing_copy_implementations            = "warn"
    missing_debug_implementations           = "warn"
    non_ascii_idents                        = "warn"
    noop_method_call                        = "warn"
    rust_2021_incompatible_closure_captures = "warn"
    rust_2021_incompatible_or_patterns      = "warn"
    rust_2021_prefixes_incompatible_syntax  = "warn"
    rust_2021_prelude_collisions            = "warn"
    single_use_lifetimes                    = "warn"
    trivial_casts                           = "warn"
    trivial_numeric_casts                   = "warn"
    unreachable_pub                         = "warn"
    unsafe_code                             = "warn"
    unsafe_op_in_unsafe_fn                  = "deny"
    unused_crate_dependencies               = "warn"
    unused_extern_crates                    = "warn"
    unused_import_braces                    = "warn"
    unused_lifetimes                        = "warn"
    unused_macro_rules                      = "warn"
    unused_qualifications                   = "warn"
    unused_results                          = "warn"
    variant_size_differences                = "warn"

    [workspace.lints.rust.keyword_idents]
      level    = "warn"
      priority = -1

    [workspace.lints.rust.nonstandard_style]
      level    = "deny"
      priority = -1

    [workspace.lints.rust.unexpected_cfgs]
      check-cfg = ["cfg(codspeed)", "cfg(fuzzing)"]
      level     = "warn"

  [workspace.lints.rustdoc]
    # Documentation quality lints
    bare_urls                    = "deny"
    broken_intra_doc_links       = "deny"
    invalid_codeblock_attributes = "warn"
    invalid_html_tags            = "warn"
    invalid_rust_codeblocks      = "warn"
    private_doc_tests            = "warn"
    private_intra_doc_links      = "warn"
    unescaped_backticks          = "warn"

  [workspace.lints.clippy]
    # Elevate certain lints to deny level
    derive_partial_eq_without_eq   = "deny"
    missing_safety_doc             = "deny"
    suspicious_operation_groupings = "deny"
    undocumented_unsafe_blocks     = "deny"

    # Keep the existing disallowed restriction lints
    dbg_macro                       = "warn"
    empty_drop                      = "warn"
    empty_structs_with_brackets     = "warn"
    exit                            = "warn"
    get_unwrap                      = "warn"
    print_stderr                    = "warn"
    print_stdout                    = "warn"
    rc_buffer                       = "warn"
    rc_mutex                        = "warn"
    rest_pat_in_fully_bound_structs = "warn"

    # Keep the nursery rules
    debug_assert_with_mut_call = "warn"
    redundant_clone            = "warn"
    unused_peekable            = "warn"

    # Enable all clippy categories with appropriate levels
    [workspace.lints.clippy.all]
      level    = "warn" # Enable all Clippy lints at warning level
      priority = -1

    [workspace.lints.clippy.cargo]
      level    = "warn"
      priority = -1

    [workspace.lints.clippy.complexity]
      level    = "warn"
      priority = -1

    [workspace.lints.clippy.correctness]
      level    = "deny" # Correctness issues should be fixed
      priority = -1

    [workspace.lints.clippy.nursery]
      level    = "warn"
      priority = -1

    [workspace.lints.clippy.pedantic]
      level    = "warn"
      priority = -2

    [workspace.lints.clippy.perf]
      level    = "warn"
      priority = -1

    [workspace.lints.clippy.style]
      level    = "warn"
      priority = -1

    [workspace.lints.clippy.suspicious]
      level    = "warn"
      priority = -1

  [workspace.metadata.cargo-machete]
    check_internal_dependencies = false
