lints.workspace = true

[dependencies]
  bumpalo.workspace = true

  typhon-source.workspace = true

[package]
  authors.workspace    = true
  categories           = ["compilers", "parser-implementations"]
  description          = "Abstract Syntax Tree (AST) for the Typhon programming language"
  edition.workspace    = true
  keywords             = ["ast", "compiler", "parser", "typhon"]
  license.workspace    = true
  name                 = "typhon-ast"
  readme               = "README.md"
  repository.workspace = true
  version.workspace    = true
