[dependencies]
  # Core dependencies
  anyhow.workspace     = true
  log.workspace        = true
  serde_json.workspace = true
  thiserror.workspace  = true

  # CLI-specific dependencies
  clap.workspace       = true # Command-line argument parsing
  env_logger.workspace = true # Logging implementation
  serde.workspace      = true
  tempfile.workspace   = true # Temporary file handling

  # Internal crates
  typhon-compiler.workspace = true
  typhon-runtime.workspace  = true

[package]
  authors.workspace    = true
  description          = "Command-line interface for the Typhon programming language"
  edition.workspace    = true
  license.workspace    = true
  name                 = "typhon-cli"
  repository.workspace = true
  version.workspace    = true

  # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
