lints.workspace = true

[dependencies]
  # Core dependencies
  anyhow.workspace     = true
  log.workspace        = true
  serde_json.workspace = true
  thiserror.workspace  = true

  # CLI-specific dependencies
  clap.workspace       = true # Command-line argument parsing
  env_logger.workspace = true # Logging implementation
  serde.workspace      = true
  tempfile.workspace   = true # Temporary file handling

  # General utilities
  inkwell.workspace = true # LLVM bindings

  # Internal crates
  typhon-compiler.workspace = true
  typhon-parser.workspace   = true
  typhon-runtime.workspace  = true

[package]
  authors.workspace    = true
  categories           = ["command-line-utilities", "development-tools"]
  description          = "Command-line interface for the Typhon programming language"
  edition.workspace    = true
  keywords             = ["cli", "compiler", "programming-language", "typhon"]
  license.workspace    = true
  name                 = "typhon-cli"
  readme               = "README.md"
  repository.workspace = true
  version.workspace    = true
