lints.workspace = true

[[bin]]
  name = "typhon"
  path = "src/main.rs"

[dependencies]
  # Core dependencies
  anyhow.workspace = true

  # CLI-specific dependencies
  clap.workspace       = true # Command-line argument parsing
  env_logger.workspace = true # Logging implementation

  # Internal crates
  typhon-parser.workspace  = true
  typhon-repl.workspace    = true
  typhon-runtime.workspace = true

[package]
  authors.workspace    = true
  categories           = ["command-line-utilities", "development-tools"]
  description          = "Command-line interface for the Typhon programming language"
  edition.workspace    = true
  keywords             = ["cli", "compiler", "programming-language", "typhon"]
  license.workspace    = true
  name                 = "typhon-cli"
  readme               = "README.md"
  repository.workspace = true
  version.workspace    = true
