lints.workspace = true

[dependencies]
  # Lexer
  logos.workspace             = true # Fast lexer generator
  unic-ucd-category.workspace = true # Unicode character categories
  unicode-xid.workspace       = true # Unicode identifier detection

  # Parser
  chumsky.workspace   = true # Ergonomic parser combinators
  thiserror.workspace = true # Error handling

  # General utilities
  bitflags.workspace     = true
  indenter.workspace     = true # Indentation management
  paste.workspace        = true
  rustc-hash.workspace   = true # Fast hash maps
  strum_macros.workspace = true

  inkwell.workspace  = true # LLVM bindings
  llvm-sys.workspace = true # LLVM system bindings
  miette.workspace   = true # Error reporting
  strum.workspace    = true # Enum utilities

  # Internal crates
  typhon-ast.workspace    = true
  typhon-parser.workspace = true

[package]
  authors.workspace    = true
  categories           = ["compilers"]
  description          = "Compiler for the Typhon programming language"
  edition.workspace    = true
  keywords             = ["compiler", "llvm", "static-typing", "typhon"]
  license.workspace    = true
  name                 = "typhon-compiler"
  readme               = "README.md"
  repository.workspace = true
  version.workspace    = true
