[package]
  authors     = ["Typhon Development Team"]
  description = "Language server implementation for the Typhon programming language"
  edition     = "2024"
  license     = "MIT OR Apache-2.0"
  name        = "typhon-lsp"
  repository  = "https://github.com/typhon-language/typhon"
  version     = "0.1.0"

  # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
  # Core dependencies
  log        = "0.4"
  serde_json = "1.0"
  thiserror  = "1.0"

  # LSP-specific dependencies
  parking_lot = "0.12" # Synchronization primitives
  ropey       = "1.6"  # Rope data structure for text manipulation
  tower-lsp   = "0.20"
  url         = "2.4"  # URL handling for LSP URIs

  [dependencies.serde]
    features = ["derive"]
    version  = "1.0"

  [dependencies.tokio] # Async runtime
    features = ["full"]
    version  = "1.28"

  # Internal crates
  [dependencies.typhon-compiler]
    path = "../typhon-compiler"

[dev-dependencies]
  insta = "1.34" # Snapshot testing
