[dependencies]
  # Core dependencies
  log.workspace        = true
  serde_json.workspace = true
  thiserror.workspace  = true

  # LSP-specific dependencies
  parking_lot.workspace = true # Synchronization primitives
  ropey.workspace       = true # Rope data structure for text manipulation
  serde.workspace       = true
  tokio.workspace       = true # Async runtime
  tower-lsp.workspace   = true
  url.workspace         = true # URL handling for LSP URIs

  # Internal crates
  typhon-compiler.workspace = true

[dev-dependencies]
  insta.workspace = true # Snapshot testing

[package]
  authors.workspace    = true
  description          = "Language server implementation for the Typhon programming language"
  edition.workspace    = true
  license.workspace    = true
  name                 = "typhon-lsp"
  repository.workspace = true
  version.workspace    = true

  # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
