[package]
  authors.workspace    = true
  description          = "Interactive REPL for the Typhon programming language"
  edition.workspace    = true
  license.workspace    = true
  name                 = "typhon-repl"
  repository.workspace = true
  version.workspace    = true

  # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
  # Core dependencies
  anyhow     = "1.0"
  log        = "0.4"
  serde_json = "1.0"
  thiserror  = "1.0"

  # REPL-specific dependencies
  env_logger = "0.10" # Logging implementation
  rustyline  = "12.0" # Line editing for REPL

  [dependencies.clap] # Command-line argument parsing
    features = ["derive"]
    version  = "4.4"

  [dependencies.serde]
    features = ["derive"]
    version  = "1.0"

  # Internal crates
  [dependencies.typhon-compiler]
    path = "../typhon-compiler"

  [dependencies.typhon-runtime]
    path = "../typhon-runtime"
