lints.workspace = true

[dependencies]
  # Core dependencies
  anyhow.workspace     = true
  log.workspace        = true
  serde_json.workspace = true
  thiserror.workspace  = true

  # REPL-specific dependencies
  clap.workspace       = true # Command-line argument parsing
  env_logger.workspace = true # Logging implementation
  rustyline.workspace  = true # Line editing for REPL
  serde.workspace      = true

  # Internal crates
  typhon-compiler.workspace = true
  typhon-runtime.workspace  = true

[package]
  authors.workspace    = true
  description          = "Interactive REPL for the Typhon programming language"
  edition.workspace    = true
  license.workspace    = true
  name                 = "typhon-repl"
  repository.workspace = true
  version.workspace    = true
