[dependencies]
  # Core dependencies
  log.workspace       = true
  thiserror.workspace = true

  # Memory management
  crossbeam.workspace = true # Concurrent data structures
  inkwell.workspace   = true
  serde.workspace     = true

  # Internal crates
  typhon-stdlib.workspace = true

[dev-dependencies]
  insta.workspace    = true # Snapshot testing
  proptest.workspace = true # Property-based testing

[package]
  authors.workspace    = true
  description          = "Runtime support library for the Typhon programming language"
  edition.workspace    = true
  license.workspace    = true
  name                 = "typhon-runtime"
  repository.workspace = true
  version.workspace    = true

  # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
