lints.workspace = true

[dependencies]
  # Core dependencies
  log.workspace       = true
  thiserror.workspace = true

  # Memory management
  crossbeam.workspace = true # Concurrent data structures
  inkwell.workspace   = true
  serde.workspace     = true

  # Internal crates
  typhon-stdlib.workspace = true

[dev-dependencies]
  insta.workspace    = true # Snapshot testing
  proptest.workspace = true # Property-based testing

[package]
  authors.workspace    = true
  categories           = ["compilers"]
  description          = "Runtime support library for the Typhon programming language"
  edition.workspace    = true
  keywords             = ["garbage-collection", "memory-management", "runtime", "typhon"]
  license.workspace    = true
  name                 = "typhon-runtime"
  readme               = "README.md"
  repository.workspace = true
  version.workspace    = true
