[package]
  authors     = ["Typhon Development Team"]
  description = "Standard library for the Typhon programming language"
  edition     = "2024"
  license     = "MIT OR Apache-2.0"
  name        = "typhon-stdlib"
  repository  = "https://github.com/typhon-language/typhon"
  version     = "0.1.0"

  # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
  # Core dependencies
  log       = "0.4"
  thiserror = "1.0"

  # Data structures
  fxhash = "0.2" # Fast hash implementation

  [dependencies.serde]
    features = ["derive"]
    version  = "1.0"

[dev-dependencies]
  insta    = "1.34" # Snapshot testing
  proptest = "1.3"  # Property-based testing
