[dependencies]
  # Core dependencies
  log.workspace       = true
  thiserror.workspace = true

  # Data structures
  fxhash.workspace = true # Fast hash implementation
  serde.workspace  = true

[dev-dependencies]
  insta.workspace    = true # Snapshot testing
  proptest.workspace = true # Property-based testing

[package]
  authors.workspace    = true
  description          = "Standard library for the Typhon programming language"
  edition.workspace    = true
  license.workspace    = true
  name                 = "typhon-stdlib"
  repository.workspace = true
  version.workspace    = true

  # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
