lints.workspace = true

[dependencies]
  # Core dependencies
  log.workspace       = true
  thiserror.workspace = true

  # Data structures
  fxhash.workspace = true # Fast hash implementation
  serde.workspace  = true

[dev-dependencies]
  insta.workspace    = true # Snapshot testing
  proptest.workspace = true # Property-based testing

[package]
  authors.workspace    = true
  categories           = ["compilers"]
  description          = "Standard library for the Typhon programming language"
  edition.workspace    = true
  keywords             = ["builtins", "standard-library", "stdlib", "typhon"]
  license.workspace    = true
  name                 = "typhon-stdlib"
  readme               = "README.md"
  repository.workspace = true
  version.workspace    = true
